--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <h2>Popular Post</h2>
                 <div class="fakeimg">
                     RSS
-                    <a type="application/rss+xml" href="https://desireetorrente.github.io/lenguaje_de_marcas/index.rss"> 
+                    <a type="application/rss+xml" href="https://desireetorrente.github.io/lenguaje_de_marcas/rss2.xml"> 
                     <img src="./rssIcon.gif">
                     </a>
                 </div><br>
