Enlace en la cabecera

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             }
         }
     </style>
+    <link rel="alternate" type="application/rss+xml" title="RSS2.0" href="https://desireetorrente.github.io/lenguaje_de_marcas/rss2.xml"/>
 </head>
 <body>
     <div class="header">
